Fix responsivenes on mobile

--- a/home/styles.css
+++ b/home/styles.css
@@ -157,7 +157,7 @@ p {
         width: 100%;
     }
 }
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
     .section2__text {
         float: left;
         width: 60%;
